# FCNN

./: .gitignore  CMakeLists.txt  MNISTDownload.cmake.temp  MNIST_download.py  README.md
include/: MNIST.h  NLayer.h  NeuralNetwork.h
src/: main.cpp
